# travel_assistant

./: .gitignore  README.md  main.py  pyproject.toml
app/: agents.py  data.py  main.py  prompt.py  schemas.py  tools.py
app/seed_data/: experiences_catalogue.json  flight_catalogue.json  hotel_catalogue.json
tests/: test_agents.py  test_data.py  test_main.py  test_prompt.py  test_schemas.py  test_tools.py
